--- a/data_wrangling.ipynb
+++ b/data_wrangling.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>(3, 5)</td>\n",
        "      <td>(4, 5)</td>\n",
        "      <td>(3, 5)</td>\n",
@@ -213,7 +213,7 @@
        "      <td>42.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>(3, 5)</td>\n",
        "      <td>(4, 5)</td>\n",
        "      <td>(3, 5)</td>\n",
@@ -237,7 +237,7 @@
        "      <td>42.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>(3, 5)</td>\n",
        "      <td>(4, 3)</td>\n",
        "      <td>(3, 3)</td>\n",
@@ -261,7 +261,7 @@
        "      <td>42.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>(3, 5)</td>\n",
        "      <td>(4, 5)</td>\n",
        "      <td>(3, 3)</td>\n",
@@ -285,7 +285,7 @@
        "      <td>38.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>(3, 3)</td>\n",
        "      <td>(4, 5)</td>\n",
        "      <td>(3, 3)</td>\n",
@@ -429,7 +429,7 @@
        "[5 rows x 55 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,12 +455,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1555, 55)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "departments_df = pd.read_csv('departments.csv', sep=';', encoding='utf-8')\n",
-    "new_dataframe = pd.concat([new_df, departments_df], axis=1).reindex(scores1.index)"
+    "new_dataframe = pd.concat([new_df, departments_df], axis=1).reindex(scores1.index)\n",
+    "new_df.shape"
    ]
   },
   {
@@ -472,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -512,119 +524,24 @@
    "source": [
     "# filtering dataframe \n",
     "filter_df = new_dataframe[(new_dataframe['Emotional Stability/Neuroticism'] < 30) & (new_dataframe['Agreeableness'] < 30) & (new_dataframe['Conscientiousness'] < 30)]\n",
-    "filter_dff = new_dataframe[(new_dataframe['Emotional Stability/Neuroticism'] > 30) & (new_dataframe['Agreeableness'] > 30) & (new_dataframe['Conscientiousness'] > 30)]\n",
+    "filter_dff = new_dataframe[(new_dataframe['Emotional Stability/Neuroticism'] >= 30) | (new_dataframe['Agreeableness'] >= 30) | (new_dataframe['Conscientiousness'] >= 30)]\n",
     "\n",
     "# printing id and departments of applicants to screen\n",
-    "print(filter_df.iloc[:, -2:])"
+    "print(filter_df.iloc[:, -2:])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Agreeableness</th>\n",
-       "      <th>Conscientiousness</th>\n",
-       "      <th>Emotional Stability/Neuroticism</th>\n",
-       "      <th>Intellect/Imagination</th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Department</th>\n",
-       "      <th>tags</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>881</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>881</td>\n",
-       "      <td>Data</td>\n",
-       "      <td>high_risk</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1197</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>1197</td>\n",
-       "      <td>Copywriting</td>\n",
-       "      <td>high_risk</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Data</td>\n",
-       "      <td>low_risk</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Data</td>\n",
-       "      <td>low_risk</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Data</td>\n",
-       "      <td>low_risk</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      Agreeableness  Conscientiousness  Emotional Stability/Neuroticism  \\\n",
-       "881            28.0               26.0                             28.0   \n",
-       "1197           22.0               26.0                             26.0   \n",
-       "0              40.0               48.0                             36.0   \n",
-       "1              46.0               46.0                             40.0   \n",
-       "2              40.0               40.0                             38.0   \n",
-       "\n",
-       "      Intellect/Imagination    ID   Department       tags  \n",
-       "881                    36.0   881         Data  high_risk  \n",
-       "1197                   28.0  1197  Copywriting  high_risk  \n",
-       "0                      42.0     0         Data   low_risk  \n",
-       "1                      42.0     1         Data   low_risk  \n",
-       "2                      42.0     2         Data   low_risk  "
+       "(1555, 7)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +552,7 @@
     "high['tags'] = 'high_risk'\n",
     "low['tags'] = 'low_risk'\n",
     "filter_tags = pd.concat([high, low])\n",
-    "filter_tags.head()"
+    "filter_tags.shape"
    ]
   },
   {
@@ -647,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +615,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>high_risk</td>\n",
+       "      <th>high_risk</th>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -707,13 +624,13 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>237.0</td>\n",
-       "      <td>243.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>326.0</td>\n",
-       "      <td>126.0</td>\n",
-       "      <td>111.0</td>\n",
+       "      <th>low_risk</th>\n",
+       "      <td>325.0</td>\n",
+       "      <td>328.0</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>449.0</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>161.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -724,10 +641,10 @@
        "Department Copywriting   Data Design Strategy Web Dev Web dev\n",
        "tags                                                         \n",
        "high_risk          1.0    1.0    0.0      0.0     0.0     0.0\n",
-       "low_risk         237.0  243.0   92.0    326.0   126.0   111.0"
+       "low_risk         325.0  328.0  120.0    449.0   170.0   161.0"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,6 +653,20 @@
     "count_tags = pd.DataFrame(filter_tags.groupby('tags')['Department'].value_counts()).unstack().fillna(0)\n",
     "count_tags\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -754,7 +685,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
